refactor: Rename Sahil Tour & Travels to Safar X
Updates the application name and associated branding across the frontend and AI service configurations to reflect the new brand identity "Safar X". This includes changes to titles, logos, metadata, AI prompts, and contact information.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sahil Tour & Travels - Premium Travel Experiences</title>
-    <link rel="icon" href="https://res.cloudinary.com/doehytakj/image/upload/v1767709555/610944102_1102917845165841_1424140423518677453_n_nooaqt.jpg" />
+    <title>Safar X - Premium Travel Experiences</title>
+    <link rel="icon" href="https://res.cloudinary.com/doehytakj/image/upload/v1767774520/567272135_3026504187556589_681659511054053744_n_wiftln.jpg" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
