feat: Enhance navigation and introduce new package types
Adds "Trekking," "Transportation," and "Tours" to the navigation packages dropdown.
Improves the "Book Now" button's hover animation for better user engagement.
Updates SEO metadata in `index.html` for improved search visibility.
Applies subtle animations to feature icons on hover in the Home section.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Safar X - Premium Travel Agency offering AI-powered trip planning, luxury holiday packages, and 24/7 support for destinations like Dubai, Maldives, and more." />
     <title>Safar X - Premium Travel Experiences</title>
     <link rel="icon" href="https://res.cloudinary.com/doehytakj/image/upload/v1767774520/567272135_3026504187556589_681659511054053744_n_wiftln.jpg" />
     <script src="https://cdn.tailwindcss.com"></script>
