--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Discover Safar X for premium travel experiences and exclusive packages. Plan your dream vacation to Dubai, Maldives, and Europe with our advanced AI-powered planning tool. Luxury, comfort, and 24/7 support guaranteed." />
+    <meta name="description" content="Unlock world-class adventures with Safar X. We provide premium travel experiences, exclusive packages, and bespoke itineraries. Utilize our AI-powered planning tool for instant, personalized trip suggestions to Dubai, Maldives, and beyond. Luxury and 24/7 support included." />
     <title>Safar X - Premium Travel Experiences</title>
     <link rel="icon" href="https://res.cloudinary.com/doehytakj/image/upload/v1767774520/567272135_3026504187556589_681659511054053744_n_wiftln.jpg" />
     <script src="https://cdn.tailwindcss.com"></script>
